# rustc-compile-time-analyze

./: Cargo.toml
src/: main.rs
