[package]
name = "rustc-compile-time-analyze"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[dependencies]
curl = "0.4"
futures = "0.1"
futures-cpupool = "0.1"
jobserver = "0.1"
rustc-demangle = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempdir = "0.3"
tokio-core = "0.1"
tokio-curl = "0.1"
tokio-process = "0.1"
